crates/integration-tests/tests/fixtures/invalid/missing_kinds.stderr
error: missing field `kinds`
  --> tests/fixtures/invalid/missing_kinds.rs:3:1
   |
3  | / impl_typed_uuid_kinds! {
4  | |     settings = {
5  | |         schemars08 = {
6  | |             feature = "schemars08",
...  |
15 | | }
   | |_^
   |
   = note: this error originates in the macro `impl_typed_uuid_kinds` (in Nightly builds, run with -Z macro-backtrace for more info)
